feat: add SideNavigation and SignOutButton component, plus update layout and metadata on profile and booking pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@/*": ["./*"],
       "@/components/*": ["./app/_components/*"],
       "@/styles/*": ["./app/_styles/*"],
-      "@/lib/*": ["./app/_lib/*"]
+      "@/lib/*": ["./app/_lib/*"],
+      "@/types/*": ["./app/types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
