feat: implement reservation context and reminder; update DateSelector and ReservationForm components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@/components/*": ["./app/_components/*"],
       "@/styles/*": ["./app/_styles/*"],
       "@/lib/*": ["./app/_lib/*"],
-      "@/types/*": ["./app/types/*"]
+      "@/types/*": ["./app/types/*"],
+      "@/context/*": ["./app/_context/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
