--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "date-fns": "^4.1.0",
     "next": "14.2.26",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^18",
     "react-day-picker": "^9.8.0",
     "react-dom": "^18"
